--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -189,11 +189,12 @@ box-shadow: 1px 2px 14px 14px #04040463;
 }
 
 .section-header a {
-    transform: translate(-50%, -50%);
+    /* transform: translate(-50%, -50%);  */
     font-size: 20px;
     color: var(--gray-color);
     cursor: pointer;
     white-space: nowrap;
+    text-align: end;
 }
 
 /* start slider */
