--- a/public/assets/css/stylertl.css
+++ b/public/assets/css/stylertl.css
@@ -130,6 +130,13 @@ z-index: 1000;
  width:60%;
 
 }
+
+@media(max-width:400px){
+    .modal-uk form .halfwidthinput{
+        width:90%;
+       
+       }  
+}
 .addrequesticon{
     background-color: #f26b1de8;
     position: fixed;
@@ -1272,7 +1279,7 @@ position: relative;
 top: -110px;
 padding: 97px 0;
 background-color: #FBFBFB;
-border-radius: 48px 0 0 0;
+border-radius:  0 48px 0 0;
 margin-left: 20px;
 text-align: center;
 
@@ -1881,7 +1888,7 @@ font-size: 1rem;
     border-radius: 12px;
     position: relative;
     top: -43px;
-    left: -44px;
+    right: -44px;
 }
 .freelanc .info{
     padding-top: 10px;
@@ -1901,7 +1908,7 @@ font-size: 1rem;
 .freelanc .info .name span:first-child{
     font-weight: 900;
     font-size: 20px;
-    padding-right: 30px;
+    padding-left: 30px;
     position: relative;
 
 }
@@ -1911,7 +1918,7 @@ font-size: 1rem;
     height: 62%;
     background-color: #777;
     position: absolute;
-    left: 90%;
+    right: 90%;
     top: 25%;
 }
 .freelanc .info .name .rate span{
@@ -2013,7 +2020,7 @@ font-size: 1rem;
     .freelanc .image img {
 
         top: -9px;
-        left: -24px;
+        right: -24px;
     }
 }
 
@@ -2103,6 +2110,34 @@ font-size: 1rem;
     width: 250px;
     height:290px;
 } */
+
+@media(max-width:767px){
+
+    .freelanc.freelancerinprofile .totals i{
+        display: none;
+    }
+
+    .freelanc.freelancerinprofile .totals div p{
+        display: flex;
+        flex-direction: column;
+
+    }
+
+   
+.freelanc.freelancerinprofile {
+    flex-direction: column;
+    /* margin: 0 30px; */
+    margin-top: 40px;
+    /* margin-top: 70px; */
+    width: calc(100% - 20px);
+    max-width: 880px;
+    /* width: 100%; */
+    margin-right:20px;
+   
+
+}
+
+}
 
 .productscroll::-webkit-scrollbar{
     display: none;
@@ -2668,6 +2703,7 @@ border-radius: 12px;
 .showrequest{
     padding-top:30px;
     padding-bottom:30px;
+    
 }
 
 .filter  button{
@@ -2675,6 +2711,7 @@ border-radius: 12px;
     background-color: #eee;
     font-weight:600;
     border-radius: 12px;
+    margin-right: 27px;
 
 }
 .filtercontainer{
@@ -2687,15 +2724,21 @@ border-radius: 12px;
     border-radius: 12px;
     position: absolute;
     top: 116%;
-    right: 108px;
+    right: 0;
     z-index: 3;
     padding: 20px 30px;
-    width: 250px;
+    min-width: 245px;
+    max-width: 100%;
     display: none;
     transition: all .3s;
     box-shadow: 1px 2px 4px #8e8e8ee3;
 }
 
+@media (min-width:767px) {
+    .filter-items{
+        right: 108px;
+    }  
+}
 .filter-items input,.filter-items label{
     font-size: 18px;
     padding-left: 6px;
