--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -412,6 +412,7 @@ background-color: var(--orange-color);
 
 /* start navbar */
 
+
 .navbar {
     padding: 20px 15px;
     position: relative;
@@ -610,6 +611,7 @@ align-items: center;
     
     }
 }
+
 
 
 .head .logo2 img{
@@ -883,6 +885,18 @@ form.search-home  input , form.search-home  button {
         
         width:350px !important;
     } 
+}
+
+
+.cart-navicon{
+    position: relative;
+}
+
+#cart-count{
+position: absolute;
+top: -15px;
+left: 0;
+font-size: 14px;
 }
 /* end nav2 */
 
@@ -3538,61 +3552,11 @@ border-radius: 50%;
 
 
 
-/* hayperpay  */
-
-
- /* .wpwl-form { 
-      background:#fff;
-border:none;
-box-shadow:none;
-display:flex;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-
-
-} */
-/* .wpwl-label-brand {display:none} */
-.wpwl-form-card { background-color: #c0c0c0a6 !important; } 
-.wpwl-control, input.wpwl-control{
-    /* border-width:0 0 0 1px;
-    border-bottom:1px solid black; */
-    box-shadow: none;
-    border-radius: 0px;
-    font-family:"ff-good-headline-web-pro-con", "Pathway Gothic One", sans-serif;
-    text-transform:none;
-    padding:10px;
-    font-size: 18px;
-    height: 50px;
-    min-width:100%
-    
+.search-location{
+    position: absolute;
+    top:0;
+    right: 0;
+    background-color: #fff;
+    color: #C0C0C0;
+    border: none;
 }
-
-
-.wpwl-form input{
-  
-}
-.input-text:focus, input[type=text]:focus, input[type=tel]:focus, input[type=url]:focus, input[type=password]:focus, input[type=search]:focus, textarea:focus {background-color: white;}
-.wpwl-brand-SOFORTUEBERWEISUNG, .wpwl-brand-GIROPAY{cursor:pointer}
-.wpwl-brand, .wpwl-img { margin: 0 0 0 auto;}
-
-.wpwl-wrapper-submit{
-  display: flex;
-  align-items: center;
-  justify-content: center
-}
-.wpwl-button, .wpwl-button:hover,.wpwl-button:active{
-background-color:#F26B1D ;
-color:#fff;
-padding: 10px 12px  !important ;
-  text-align: center;
-  border:none;
-  border-radius: 20px;
-
-  width:240px;
-
-  margin-top: 15px;
-
-}
-
-/* end hayper pay */
