--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -315,13 +315,13 @@ body {
 }
 
 @media (min-width: 767px) {
-    #signup .modal-content {
+    #signup .modal-body {
         padding-left: 30px;
         padding-right: 30px;
     }
 }
 @media (min-width: 902px) {
-    #signup .modal-content {
+    #signup .modal-body {
         padding-left: 80px;
         padding-right: 82px;
     }
@@ -855,7 +855,7 @@ form.search-home button {
 #cart-count {
     position: absolute;
     top: -15px;
-    left: 0;
+    right: 0;
     font-size: 14px;
 }
 /* end nav2 */
