--- a/public/assets/css/stylertl.css
+++ b/public/assets/css/stylertl.css
@@ -2286,6 +2286,7 @@ footer .row + p {
 }
 .userprofile .profimg img {
     width: 80px;
+    height: 80px;
     border-radius: 50%;
     object-fit: cover;
     box-sizing: border-box;
