--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -927,7 +927,7 @@ form.search-home button {
 /* start category */
 
 .categories {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     margin-bottom: 20px;
 }
 
