--- a/public/assets/css/stylertl.css
+++ b/public/assets/css/stylertl.css
@@ -929,7 +929,7 @@ form.search-home button {
 /* start category */
 
 .categories {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     margin-bottom: 20px;
 }
 
