--- a/public/assets/css/stylertl.css
+++ b/public/assets/css/stylertl.css
@@ -2875,13 +2875,13 @@ button .number {
 .chat .conversation .leftcont {
     width: 100%;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 0 10px;
 }
 .chat .conversation .rightcont {
     width: 100%;
     display: flex;
-    justify-content: flex-end !important;
+    justify-content: flex-end  !important;
     padding: 0 10px;
 }
 .chat .conversation .chat-txt p {
@@ -2890,14 +2890,14 @@ button .number {
 }
 .chat .conversation .rightside {
     background-color: #f7aa7e;
-    border-radius: 35px 35px 0 35px;
+    border-radius: 35px 35px 35px 0 ;
     padding: 12px;
     color: #000;
 }
 
 .chat .conversation .leftside {
     background-color: #f4f4f4;
-    border-radius: 35px 35px 35px 0;
+    border-radius: 35px 35px 0 35px ;
     padding: 12px;
     color: #000;
 }
