--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2447,6 +2447,7 @@ button .number {
     font-weight: 600;
     color: #000;
     margin-bottom: 0;
+    word-break: break-all;
 }
 .file .details .info {
     flex-grow: 1;
@@ -3331,4 +3332,19 @@ textarea.delay {
     background-color: #fff;
     color: #c0c0c0;
     border: none;
+}
+
+
+
+.fileTool a{
+    margin-bottom: 26px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.fileTool i{
+    margin-left:5px;
+    margin-right:5px;
+    font-size: 18px;
 }
