--- a/public/assets/css/stylertl.css
+++ b/public/assets/css/stylertl.css
@@ -428,7 +428,8 @@ input[type="checkbox"] {
 @media (min-width: 992px) {
     .navbar .collapse {
         flex-basis: 0 !important;
-        flex-grow: 1 !important;
+        flex-grow: 0 !important;
+        min-width: fit-content;
     }
 }
 
@@ -529,6 +530,8 @@ nav .container-fluid {
 .nav-x {
     display: flex;
 }
+
+
 
 #heronav {
 }
@@ -632,6 +635,11 @@ ul.navbar-nav.me-auto.mb-2.mb-lg-0 {
 }
 .head .navbar-header .nav-x .dropdown-menu {
     left: 44px !important;
+}
+
+.navbar-nav  .nav-item{
+padding-left:.5rem;
+
 }
 
 .head .logo {
