--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -605,10 +605,17 @@ nav .container-fluid {
     max-width: 100%;
 }
 
+
 ul.navbar-nav.me-auto.mb-2.mb-lg-0 {
-    flex-direction: row-reverse;
+    flex-direction: column;
 }
 
+
+@media(min-width:992px){
+    ul.navbar-nav.me-auto.mb-2.mb-lg-0 {
+        flex-direction: row-reverse;
+    }
+}
 @media (min-width: 767px) {
     .head {
         padding-left: 20px;
