--- a/public/assets/css/stylertl.css
+++ b/public/assets/css/stylertl.css
@@ -602,9 +602,15 @@ nav .container-fluid {
 /* end navbar */
 
 /* nav2 */
-
 ul.navbar-nav.me-auto.mb-2.mb-lg-0 {
-    flex-direction: row-reverse;
+    flex-direction: column;
+}
+
+
+@media(min-width:992px){
+    ul.navbar-nav.me-auto.mb-2.mb-lg-0 {
+        flex-direction: row-reverse;
+    }
 }
 .head {
     position: absolute;
