--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1742,7 +1742,8 @@ footer .row + p {
 }
 
 .notification .noti .image img {
-    width: 100%;
+    width: 85%;
+    height: 62%;
     border-radius: 50%;
 }
 
