--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -365,7 +365,9 @@ input[type="checkbox"] {
     margin-right: 5px;
     height: 49px;
     /* width: 172px; */
-    width: 240px;
+    /* width: 240px; */
+    padding: 10px 30px;
+    max-width: 100%;
     font-weight: 900;
     border-radius: 41px;
     display: flex;
@@ -624,7 +626,7 @@ ul.navbar-nav.me-auto.mb-2.mb-lg-0 {
 }
 
 .head a {
-    font-size: 18px;
+    font-size: 1.2rem;
 }
 .head .navbar-header {
     display: flex;
@@ -895,7 +897,7 @@ form.search-home button {
 
     min-height: 60vh;
 
-    /* top:-48px; */
+    top:-2px;
 }
 
 /* .layout {
@@ -3360,4 +3362,8 @@ textarea.delay {
     margin-left:5px;
     margin-right:5px;
     font-size: 18px;
+}
+
+.iti__selected-flag {
+    margin-left: 20px;
 }
